[project]
name = "homework-oop"
version = "0.1.0"
description = ""
authors = [
    {name = "Denis Gulyaev",email = "den23208@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
mypy = "^1.15.0"
flake8 = "^7.1.1"
isort = "^6.0.0"


[tool.poetry.group.testdev.dependencies]
pytest = "^8.3.4"
pytest-html = "^4.1.1"

